<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".sets.SetsHomePage">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTreeSet"
        android:layout_width="185dp"
        android:layout_height="300dp"
        android:padding="10dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardHashSet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cardHashSet"
        app:layout_constraintTop_toTopOf="@+id/cardHashSet">

        <TextView
            android:id="@+id/tvCardTreeSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardHashSet"
        android:layout_width="185dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintEnd_toStartOf="@+id/cardTreeSet"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvCardHashSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/etSetsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/add_an_element_into_set"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHashSet" />

    <Button
        android:id="@+id/btnAddIntoSets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSetsValue" />

    <TextView
        android:id="@+id/tvHashSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hash_set"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvTreeSet"
        app:layout_constraintEnd_toStartOf="@+id/tvTreeSet"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTreeSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tree_set"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvHashSet"
        app:layout_constraintTop_toBottomOf="@+id/cardTreeSet" />

</androidx.constraintlayout.widget.ConstraintLayout>