<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_wave" />


        <TextView
            android:id="@+id/tvDashBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dashboard"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="340dp"
            android:layout_height="120dp"
            android:layout_marginTop="29dp"
            app:cardCornerRadius="17dp"
            app:cardElevation="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDashBoard">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/image"
                android:scaleType="centerInside"
                android:src="@drawable/sort" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="35dp"
                android:text="@string/sorting_nalgorithms"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="340dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="17dp"
            app:cardElevation="15dp"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card1">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/image"
                android:scaleType="centerInside"
                android:src="@drawable/set" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginTop="35dp"
                android:text="@string/set_nalgorithms"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="340dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="17dp"
            app:cardElevation="15dp"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card2">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/image"
                android:scaleType="centerInside"
                android:src="@drawable/hash" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginTop="35dp"
                android:text="@string/hashing_n_algorithms"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card4"
            android:layout_width="340dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="17dp"
            app:cardElevation="15dp"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card3">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/image"
                android:scaleType="centerInside"
                android:src="@drawable/tree" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginTop="35dp"
                android:text="@string/tree_n_algorithms"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>